--- a/automations.yaml
+++ b/automations.yaml
@@ -114,11 +114,13 @@
   description: ''
   trigger:
   - platform: numeric_state
-    entity_id: sensor.android_bluedroid_batterie
+    entity_id:
+    - sensor.redmi_note_9_batterie
     below: 25
     id: below
   - platform: numeric_state
-    entity_id: sensor.android_bluedroid_batterie
+    entity_id:
+    - sensor.redmi_note_9_batterie
     above: 90
     id: above
   condition: []
@@ -168,7 +170,8 @@
       - service: switch.turn_on
         data: {}
         target:
-          entity_id: switch.android_bluedroid_screen
+          entity_id:
+          - switch.redmi_note_9_screen
     - conditions:
       - condition: trigger
         id:
@@ -182,7 +185,8 @@
       - service: switch.turn_off
         data: {}
         target:
-          entity_id: switch.android_bluedroid_screen
+          entity_id:
+          - switch.redmi_note_9_screen
   mode: single
 - id: '1697749826124'
   alias: Lessive - Notif
@@ -500,7 +504,7 @@
       ambient_light_options: ambient_light_option_enabled
       ambient_light_sensor: sensor.capteur_mouvement_entree_aqara_illuminance_lux
       ambient_light_value: 20
-      include_ambient: ambient_enabled
+      include_ambient: ambient_disabled
       ambient_light_high_value: 80
       motion_bypass_lights_off:
       - input_boolean.killswitch_entree_mouvement_lumiere
@@ -508,8 +512,8 @@
       - bypass_enabled_turn_off
       sun_elevation: 1
       include_time: time_enabled
-      after_time: 07:00:00
-      before_time: 01:00:00
+      after_time: '10:00:00'
+      before_time: 01:30:00
 - id: '1700176345431'
   alias: La balise Alarme NFC est analysée
   description: ''
@@ -536,12 +540,6 @@
     path: sbyx/low-battery-level-detection-notification-for-all-battery-sensors.yaml
     input:
       actions:
-      - service: notify.m3te0r
-        data:
-          title: "\U0001FAAB Batteries faibles"
-          message: 'Alerte batterie faible pour les appareils:
-
-            {{sensors|replace(", ", "\n")}}'
       - service: notify.mobile_app_cph2399
         data:
           title: "\U0001FAAB Batteries faibles"
@@ -600,18 +598,18 @@
     entity_id: 2281233bff80fbcef526e0d1b47bea46
     domain: binary_sensor
     id: presence_off
-  - type: occupied
-    platform: device
-    device_id: a920d899b6541f5db2d18348fdbc240a
-    entity_id: 2fbe14964a28e57a37b440993d895bf4
-    domain: binary_sensor
-    id: presence_zone_bureau_mathieu
-  - type: not_occupied
-    platform: device
-    device_id: a920d899b6541f5db2d18348fdbc240a
-    entity_id: 2fbe14964a28e57a37b440993d895bf4
-    domain: binary_sensor
-    id: presence_off_zone_bureau_mathieu
+  - platform: state
+    entity_id:
+    - binary_sensor.ld2450_bureau_53l3cu5_zone1_presence
+    from:
+    to: 'on'
+    id: zone1_bureau_presence_on
+  - platform: state
+    entity_id:
+    - binary_sensor.ld2450_bureau_53l3cu5_zone1_presence
+    from:
+    to: 'off'
+    id: zone1_bureau_presence_off
   condition: []
   action:
   - choose:
@@ -636,11 +634,11 @@
             device_id: cf1220201c072cf06058c0aa01bf6093
             entity_id: c608086a0c3565145dbcfb423e8e060b
             domain: sensor
-            below: 70
+            below: 50
       sequence:
       - type: turn_on
         device_id: 53552760c1c406130f77d8044950f639
-        entity_id: 584126639151fb0fa3d38d455995d128
+        entity_id: 49536f7df05f0715498654e28d6446d9
         domain: light
     - conditions:
       - condition: trigger
@@ -649,45 +647,37 @@
       sequence:
       - type: turn_off
         device_id: 53552760c1c406130f77d8044950f639
-        entity_id: 584126639151fb0fa3d38d455995d128
+        entity_id: 49536f7df05f0715498654e28d6446d9
         domain: light
     - conditions:
       - condition: and
         conditions:
         - condition: trigger
           id:
-          - presence_zone_bureau_mathieu
+          - zone1_bureau_presence_on
         - type: is_occupied
           condition: device
           device_id: cf1220201c072cf06058c0aa01bf6093
           entity_id: 2281233bff80fbcef526e0d1b47bea46
           domain: binary_sensor
       sequence:
-      - service: light.turn_on
-        metadata: {}
+      - metadata: {}
         data:
           transition: 4
         target:
           entity_id: light.lumieres_bureau_mathieu
+        action: light.turn_on
     - conditions:
-      - condition: or
-        conditions:
-        - type: is_not_occupied
-          condition: device
-          device_id: cf1220201c072cf06058c0aa01bf6093
-          entity_id: 2281233bff80fbcef526e0d1b47bea46
-          domain: binary_sensor
-        - condition: trigger
-          id:
-          - presence_off_zone_bureau_mathieu
-          - presence_off
+      - condition: trigger
+        id:
+        - zone1_bureau_presence_off
       sequence:
-      - service: light.turn_off
-        metadata: {}
+      - metadata: {}
         data:
           transition: 4
         target:
           entity_id: light.lumieres_bureau_mathieu
+        action: light.turn_off
   mode: queued
   max: 12
 - id: '1707003699925'
@@ -700,11 +690,11 @@
       - binary_sensor.capteur_ld2450_entree_bis_zone_2_occupancy
       light_switch:
         entity_id: light.switch_cuisine_plafonnier
-      time_delay: 0.5
+      time_delay: 1
       include_sun: sun_enabled
-      sun_elevation: 0
-      after_time: 07:00:00
-      before_time: 01:00:00
+      sun_elevation: 1
+      after_time: '10:00:00'
+      before_time: 01:30:00
       include_time: time_enabled
 - id: '1708454008051'
   alias: Boite aux lettres
@@ -721,5 +711,91 @@
     metadata: {}
     data:
       message: "\U0001F4EB\U0001F4EB\U0001F4EB\U0001F4EB"
-      title: "\U0001F4EB\U0001F4EB\U0001F4EB\U0001F4EB"
+      title: "\U0001F4EB\U0001F4EB\U0001F4EB"
   mode: single
+- id: '1717189447331'
+  alias: Bambu Lab WLED Controller
+  description: ''
+  use_blueprint:
+    path: greghesp/wled_controller.yaml
+    input:
+      chamber_light: light.a1_03919c440501678_lumiere_de_la_chambre
+      wled_lights:
+      - 8a5b04ded54815226bc72bd6f9b0eb39
+      printer_stage: sensor.a1_03919c440501678_etape_actuelle
+      printer_status: sensor.a1_03919c440501678_etat_de_l_impression
+- id: '1725822685125'
+  alias: Sensor Light Bureau Global
+  description: ''
+  use_blueprint:
+    path: Blackshome/sensor-light.yaml
+    input:
+      motion_trigger:
+      - binary_sensor.capteur_presence_bureau_s3_mini_presence
+      light_switch:
+        entity_id: light.switch_bureau
+      time_delay: 0.5
+      include_ambient: ambient_enabled
+      ambient_light_sensor: sensor.capteur_presence_bureau_s3_mini_bh1750_illuminance
+- id: '1725830763507'
+  alias: Sensor Light Bureau Mathieu
+  description: ''
+  use_blueprint:
+    path: Blackshome/sensor-light.yaml
+    input:
+      motion_trigger:
+      - binary_sensor.ld2450_bureau_53l3cu5_zone1_presence
+      light_switch:
+        entity_id: light.lumieres_bureau_mathieu
+      time_delay: 0
+      include_light_control:
+      - use_brightness
+      - use_transition
+      light_transition_on: 2
+      light_transition_off: 10
+- id: '1726324063303'
+  alias: Enable/disable charging roborock
+  description: ''
+  trigger:
+  - platform: numeric_state
+    entity_id:
+    - sensor.roborock_s7_maxv_batterie
+    below: 25
+    id: below
+  - platform: numeric_state
+    entity_id:
+    - sensor.roborock_s7_maxv_batterie
+    above: 99
+    id: above
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - below
+      sequence:
+      - data: {}
+        action: switch.turn_on
+        target:
+          device_id: 0416a2f883658b69f8d52b986f7a27ec
+    - conditions:
+      - condition: trigger
+        id:
+        - above
+      sequence:
+      - data: {}
+        action: switch.turn_off
+        target:
+          device_id: 0416a2f883658b69f8d52b986f7a27ec
+  mode: single
+- id: '1726427444805'
+  alias: Decouple bureau test
+  description: ''
+  use_blueprint:
+    path: webturner/decouple-switch-input-from-relay-output-v1-0-0.yaml
+    input:
+      zbMini: switch.switch_bureau
+      isolator: input_boolean.decoupled_switch_bureau
+      controlled_light:
+        entity_id: light.lampe_rgbw_bureau_pc
